# epibarrett

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: DATA.md  METHODS.md  MODEL_CARD.md  SCIENCE.md
hf_data/: README.md  meta.parquet
hf_model/: README.md  epibarrett_model.joblib  metrics.json
hf_space/: README.md  app.py  requirements.txt  sample_beta.csv
scripts/: run_demo.py  run_real.py
src/epibarrett/: __init__.py  config.py  evaluate.py  features.py  hf_hub.py  interpret.py  models.py  panels.py  pipeline.py  plots.py
src/epibarrett/data/: __init__.py  download.py  preprocess.py  simulate.py
tests/: test_pipeline.py  test_plots.py
